Fix Ground Nav Feature Width (#2205)
While testing the updated Ground Nav in WordPress, I noticed that if the
feature content was too short, and there was only one feature showing,
it chould shrink and look odd. This PR remedies that by applying a
min-width to the feature container.

--- a/src/components/ground-nav/ground-nav.scss
+++ b/src/components/ground-nav/ground-nav.scss
@@ -73,14 +73,17 @@
 
 /**
  * 1. Keep contents from overflowing border-radius
- * 2. Used to position the features side-by-side on large screens
+ * 2. Min width to keep promos with short content from shrinking
+ * 3. Used to position the features side-by-side on large screens
  */
 .c-ground-nav__features-inner {
   @include border-radius.conditional;
   contain: paint; // 1
+  min-inline-size: 100%; // 2
 
   @media (width >= breakpoint.$l) {
-    display: flex; // 2
+    display: flex; // 3
+    min-inline-size: size.$max-width-prose; // 2
   }
 }
 
